; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs4_subs.c_nfs4_ace_vfstype_to_nfstype.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/nfs/extr_nfs4_subs.c_nfs4_ace_vfstype_to_nfstype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NFS_ACE_ACCESS_ALLOWED_ACE_TYPE = common dso_local global i32 0, align 4
@NFS_ACE_ACCESS_DENIED_ACE_TYPE = common dso_local global i32 0, align 4
@NFS_ACE_SYSTEM_AUDIT_ACE_TYPE = common dso_local global i32 0, align 4
@NFS_ACE_SYSTEM_ALARM_ACE_TYPE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nfs4_ace_vfstype_to_nfstype(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %15 [
    i32 128, label %7
    i32 129, label %9
    i32 130, label %11
    i32 131, label %13
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @NFS_ACE_ACCESS_ALLOWED_ACE_TYPE, align 4
  store i32 %8, i32* %3, align 4
  br label %18

9:                                                ; preds = %2
  %10 = load i32, i32* @NFS_ACE_ACCESS_DENIED_ACE_TYPE, align 4
  store i32 %10, i32* %3, align 4
  br label %18

11:                                               ; preds = %2
  %12 = load i32, i32* @NFS_ACE_SYSTEM_AUDIT_ACE_TYPE, align 4
  store i32 %12, i32* %3, align 4
  br label %18

13:                                               ; preds = %2
  %14 = load i32, i32* @NFS_ACE_SYSTEM_ALARM_ACE_TYPE, align 4
  store i32 %14, i32* %3, align 4
  br label %18

15:                                               ; preds = %2
  %16 = load i32, i32* @EINVAL, align 4
  %17 = load i32*, i32** %5, align 8
  store i32 %16, i32* %17, align 4
  store i32 0, i32* %3, align 4
  br label %18

18:                                               ; preds = %15, %13, %11, %9, %7
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
